syntax = "proto3";
package nas;

message EntityId {
  string value = 1;
}